--- a/JS/uberAPP/index.html
+++ b/JS/uberAPP/index.html
@@ -7,7 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <img style="width: 85%;" src="/JS/uberAPP/images/Uber-UML1.png" alt="">
+    <h1>UML</h1><br>
+    <img style="width: 85%;" src="/JS/uberAPP/images/Uber-UML1.png" alt=""><br>
+    <h2>HERENCIA</h2><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/public/uploads/aplicando-herencia-a-nuestro-proyecto-uber1_bf088c4f-9198-4a8b-b91a-abe62debf181.png" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/public/uploads/aplicando-herencia-a-nuestro-proyecto-uber2_5ba149e0-9792-4e82-9430-84a44b7c1060.png" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/public/uploads/aplicando-herencia-a-nuestro-proyecto-uber2_5ba149e0-9792-4e82-9430-84a44b7c1060.png" alt=""><br>
+    <h2>DIAGRAMA</h2>
+    <img style="width: 85%;" src="https://static.platzi.com/media/public/uploads/diagrama_10b7b328-fbde-4cc2-b758-0b31ec6f0260.jpg" alt="">
+    <br></br>
+    <br></br>
+    <h2>HERENCIA JS</h2>
+    <img style="width: 85%;" src="https://static.platzi.com/media/user_upload/javascript-superclase-account-11d117ca-fa9f-4276-a242-1197a6222e8c.jpg" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/user_upload/javascript-subclase-user-cec6f851-93e2-4d53-9aaa-ec065750b48c.jpg" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/user_upload/javascript-subclase-driver-f3d5558d-addd-4e14-a6e1-eedbc10fe19b.jpg" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/user_upload/javascript-index-file-cfe42c54-c076-44d8-8dcb-1ffcb2b1675d.jpg" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/user_upload/javascript-output-6d781bcd-a3ab-47f6-aa5a-f727f000d0f7.jpg" alt=""><br>
+    <img style="width: 85%;" src="https://static.platzi.com/media/user_upload/Captura%20de%20pantalla%202019-01-21%20a%20la%28s%29%2012.21.03-6c3f1263-88f7-44db-a123-ba70c028069c.jpg" alt="Herencia Payments">
+    
 </body>
-<script src="app.js"></script>
+<script type="module" src="app.js"></script>
+<!--<script type="module" src="prueba.js"></script>-->
 </html>
